--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80;
+        listen 3110;
         server_name your-domain.com;  # 替换为你的域名或 IP 地址
 
         root /var/www/web;  # 指向 Laravel public 目录的绝对路径
@@ -29,7 +29,7 @@ http {
 
         # 处理 PHP 脚本的 location
         location ~ \.php$ {
-			fastcgi_pass   php:9000;
+			fastcgi_pass   http:://127.0.0.1:9000;
             fastcgi_index  app.php;
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include        fastcgi_params;
