--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,18 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisor/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=10
+loglevel=info
+pidfile=/var/run/supervisord.pid  ; 将 PID 文件放置在 /var/run/ 目录
+user=root
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
@@ -9,7 +22,7 @@ autostart=true
 autorestart=true
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm7.2 -F
+command=/usr/local/sbin/php-fpm -F
 stdout_logfile=/var/log/php-fpm/php-fpm_stdout.log
 stderr_logfile=/var/log/php-fpm/php-fpm_stderr.log
 autostart=true
