--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-user  nginx;
+user  www-data;
 worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
@@ -17,7 +17,7 @@ http {
 
     server {
         listen 3110;
-        server_name your-domain.com;  # 替换为你的域名或 IP 地址
+        server_name localhost 127.0.0.1;  # 替换为你的域名或 IP 地址
 
         root /var/www/web;  # 指向 Laravel public 目录的绝对路径
         index app.php index.html index.htm;
@@ -29,7 +29,7 @@ http {
 
         # 处理 PHP 脚本的 location
         location ~ \.php$ {
-			fastcgi_pass   http:://127.0.0.1:9000;
+			fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  app.php;
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include        fastcgi_params;
