--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,7 +69,7 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-    port: '587'
+    port: '%mailer_port%'
     encryption: 'tls'
     spool: { type: service, id: snc_redis.swiftmailer.spool }
 
