--- a/supervisord.conf
+++ b/supervisord.conf
@@ -34,3 +34,8 @@ stdout_logfile=/var/log/push-service_stdout.log
 stderr_logfile=/var/log/push-service_stderr.log
 autostart=true
 autorestart=true
+
+[program:cron]
+command = /usr/sbin/cron -f
+autostart = true
+autorestart = true
