--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-
+    client_max_body_size 20M;
     sendfile        on;
     keepalive_timeout  65;
 
