--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -6,7 +6,7 @@ services:
 
     Yeskn\MainBundle\Twig\WebsiteInfo:
         tags:
-            - { name: twig.extension }
+        - { name: twig.extension }
 
     Yeskn\MainBundle\EventListener\RequestListener:
         tags:
@@ -19,6 +19,10 @@ services:
     Yeskn\MainBundle\EventListener\ResponseListener:
         tags:
         - { name: kernel.event_listener, event: kernel.response }
+
+    Yeskn\MainBundle\EventListener\LoginListener:
+        tags:
+        - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
 
     Symfony\Bridge\Twig\Extension\AssetExtension: "@twig.extension.assets"
     Symfony\Bundle\SecurityBundle\Security\FirewallMap: "@security.firewall.map"
