--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "yeskn-studio/vmoex-framework",
-    "description": "一个二次元向的社区程序",
+    "description": "",
     "license": "MIT",
     "type": "project",
     "autoload": {
