--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,6 +33,7 @@ security:
             logout:
                 path: /logout
                 target: /
+                success_handler: Yeskn\MainBundle\EventListener\LogoutHandler
             remember_me:
                 secret: '%secret%'
                 name: _token
