--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,10 @@ http {
     client_max_body_size 20M;
     sendfile        on;
     keepalive_timeout  65;
-
+    # 使用 Cloudflare 提供的 CF-Connecting-IP 头部
+    real_ip_header CF-Connecting-IP;
+    # 可选：如果无法获取 CF-Connecting-IP，则使用 X-Forwarded-For 头部
+    real_ip_header X-Forwarded-For;
     server {
         listen 3110;
         server_name localhost 127.0.0.1;  # 替换为你的域名或 IP 地址
